# rover2_ws

./: README.md  check_sensors.sh  launch_rl.sh
src/.bubble_planner/: .gitignore  CMakeLists.txt  README.md  commands.bash  demo_campusrover.py  demo_campusrover_bubblempc.py  package.xml
src/.bubble_planner/bubble_mpc/: README.md  bubble_mpc_node.cpp  bubble_mpc_solver.cpp
src/.bubble_planner/bubble_mpc/bubble_mpc_model/: gen_model.py  model.py
src/.bubble_planner/costmap_converter/: map_to_obstacle_simple.cpp  mot_to_obstacle_simple.cpp  obstacle_filter.cpp  split_obstacles_node.cpp  wall_and_dynamic_obstacle_map.cpp
src/.bubble_planner/include/: .demo_campus_node_3.hpp  bubble_mpc_solver.hpp  library.hpp  nanoflann.hpp.1
src/.bubble_planner/include/path_builder/: path_builder_core.hpp  path_builder_visualizer.hpp
src/.bubble_planner/launch/: bubble_planner.launch.py  costmap.launch.py  demo_launch.py  dwa.launch.py  logger.launch.py  mpc.launch.py  turtlesim_driver.launch.py
src/.bubble_planner/msg/: MPCParameter.msg  ObstacleInfo.msg
src/.bubble_planner/path_planner/: local_path_node.cpp  regular_points_node.cpp  regular_points_node_ori.cpp
src/.bubble_planner/path_planner/path_build/: path_builder_core.cpp  path_builder_node.cpp  path_builder_visualizer.cpp
src/.bubble_planner/rviz/: bubble_mpc_sim.rviz  costmap.rviz  navigation_ndt.rviz  ndt.rviz  points_path_sim.rviz
src/.bubble_planner/simulator/costmap/: costmap_merge.cpp  costmap_merge_inflation.cpp  dynamic_obs.cpp  static_obs.cpp  tracked_obs.cpp
src/.bubble_planner/simulator/turtle_sim/: generated_sim_odom.cpp  global_path_generator.cpp  robot_marker.cpp  turtlesim_to_map.cpp
src/.bubble_planner/src/: .demo_campus_node_3.cpp  just_fellow.cpp  trajectory_recorder.cpp
src/campusrover_base/campusrover_description/: CMakeLists.txt  package.xml
src/campusrover_base/campusrover_description/rviz/: urdf.rviz
src/campusrover_base/campusrover_description/urdf/: campusrover.urdf  campusrover_base.urdf  campusrover_base.xacro  campusrover_charging.xacro  campusrover_chgh.xacro  charging_table.urdf  generate_urdf.sh
src/campusrover_base/campusrover_driver/: CMakeLists.txt  package.xml
src/campusrover_base/campusrover_driver/include/: rover_driver.hpp
src/campusrover_base/campusrover_driver/launch/: .campusrover_driver.launch  campusrover_driver_launch.py
src/campusrover_base/campusrover_driver/param/: driver_charging.yaml  driver_chgh.yaml  yocs_cmd_vel_mux.yaml
src/campusrover_base/campusrover_driver/rviz/: odom.rviz
src/campusrover_base/campusrover_driver/src/: calibration.cpp  hmi_joy_control.cpp  joy_to_twist.cpp  lcr_cmd_vel_mux.cpp  odom_to_tf.cpp  rover_driver.cpp
src/campusrover_base/campusrover_driver/test/: rostest_control_valiation.cpp  utest_scurve_profile.cpp  utest_trapezoidal_profile.cpp
src/campusrover_base/campusrover_msgs/: CMakeLists.txt  package.xml
src/campusrover_base/campusrover_msgs/msg/: ArmTablePoseStatus.msg  BboxAngle.msg  BboxAngleArray.msg  ButtonCommand.msg  ButtonPoses.msg  CANbus.msg  ChargerStatus.msg  DoorStatus.msg  ElevatorControlStatus.msg  ElevatorInfo.msg  ElevatorInfoArray.msg  FloorStatus.msg  HmiStatus.msg  InDemoStatus.msg  LocationRoom.msg  PoseWithId.msg  RLObservation.msg  RLObservationArray.msg  Room.msg  RoomConnected.msg  State.msg  TrackedObstacle.msg  TrackedObstacleArray.msg  Trip.msg  WorkingFloor.msg
src/campusrover_base/campusrover_msgs/srv/: ActionCharging.srv  ActionParking.srv  ArmAction.srv  ArmMovePose.srv  ArmTableHomeReturn.srv  ButtonParking.srv  ButtonRecognize.srv  ButtonStatus.srv  DemoPath.srv  DriveProfile.srv  DriveStatus.srv  ElevatorControlInterface.srv  ElevatorStatusChecker.srv  EncoderCount.srv  ImgLabel.srv  InitFloor.srv  LocalizerLauncher.srv  LocalizerSwitch.srv  MapClosestLocation.srv  MapInfo.srv  MapInitPose.srv  MapLoadInfo.srv  ModuleInfo.srv  PlannerFunction.srv  PressButton.srv  PullOverPathGenerator.srv  RoutingPath.srv  StatePlan.srv
src/campusrover_costmap_ros2/: CMakeLists.txt  FOXY_COMPATIBILITY_GUIDE.md  FOXY_VERIFICATION_FINAL.md  README.md  README_ROS2.md  ROS2_MIGRATION_SUMMARY.md  VERIFICATION_REPORT.md  package.xml
src/campusrover_costmap_ros2/config/: global_costmap.yaml  local_costmap.yaml
src/campusrover_costmap_ros2/include/: campusrover_costmap.h  global_costmap.hpp
src/campusrover_costmap_ros2/launch/: global_costmap.launch  start_costmap.launch
src/campusrover_costmap_ros2/launch_ros2/: global_costmap.launch.py  local_costmap.launch.py
src/campusrover_costmap_ros2/src/: global_costmap.cpp  global_costmap_node.cpp  laser_to_pointcloud2.cpp  local_costmap.cpp  local_costmap_node.cpp
src/campusrover_costmap_ros2/test_data/: stata.yaml
src/campusrover_navigation/campusrover_mot/: CMakeLists.txt  package.xml
src/campusrover_navigation/campusrover_mot/include/: mot.hpp
src/campusrover_navigation/campusrover_mot/launch/: mot.launch  mot.launch.py  mot_test.launch  mot_test.launch.py
src/campusrover_navigation/campusrover_mot/rviz/: show.rviz
src/campusrover_navigation/campusrover_mot/script/: mot_marker_node.py  show_now_pose.py  sim_mot.py  sub_obs_to_csv.py  target_pose_to_csv.py
src/campusrover_navigation/campusrover_mot/src/: mot_node.cpp  mot_node.hpp
src/campusrover_navigation/campusrover_move/: CMakeLists.txt  package.xml
src/campusrover_navigation/campusrover_move/launch/: dwa_planner_launch.py  path_following_launch.py
src/campusrover_navigation/campusrover_rl_policy/: package.xml  setup.cfg  setup.py
src/campusrover_routing/: CMakeLists.txt  package.xml
src/campusrover_routing/include/: node_routing.h
src/campusrover_routing/launch/: routing_node_launch.py
src/campusrover_routing/scripts/: mapinfo_db_handler.py
src/test_pkg/: CMakeLists.txt  README.md  commands.bash  package.xml
src/test_pkg/launch/: bag_record.launch.py  dwa.launch.py  logger.launch.py
src/test_pkg/msg/: AllTestData.msg  TestData.msg
src/test_pkg/scripts/: dwa_con.py  mpc_test_node.py
src/test_pkg/src/: experiment_logger.cpp  planner_data_collector.cpp
(+126 files in other folders)
