<?xml version="1.0"?>
<package format="3">
  <name>campusrover_routing</name>
  <version>0.0.1</version>
  <description>Campus Rover Routing package ported to ROS 2</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <exec_depend>rclpy</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>Eigen3</depend>
  <depend>campusrover_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
