<?xml version="1.0"?>
<package format="3">
  <name>test_pkg</name>
  <version>0.0.0</version>
  <description>The test_pkg package</description>
  <maintainer email="halao2@todo.todo">halao2</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend> 

  <depend>rclcpp</depend>
  <depend>angles</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>interactive_markers</depend>
  <depend>std_srvs</depend>
  <depend>campusrover_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>        
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>