<?xml version="1.0"?>
<package format="3">
  <name>campusrover_description</name>
  <version>0.0.0</version>
  <description>
    campusrover_description provides a complete 3D model of the campus rover
    for simulation and visualization. The files in this package are parsed and
    used by other components. Most users will not interact directly with this package.
  </description>

  <maintainer email="jackey@todo.todo">jackey</maintainer>
  <license>BSD</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
