<?xml version="1.0"?>
<package format="3">
  <name>campusrover_mot</name>
  <version>0.0.0</version>
  <description>The campusrover_mot package</description>

  <maintainer email="lab314@todo.todo">lab314</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>campusrover_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>costmap_converter_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
