<?xml version="1.0"?>
<package format="3">
  <name>campusrover_move</name>
  <version>0.0.0</version>
  <description>The campusrover_move package</description>

  <maintainer email="tucker@todo.todo">luke</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>nav2_navfn_planner</depend> -->
  <!-- <depend>nav2_core</depend> -->
  <depend>Eigen3</depend>
  <depend>control_toolbox</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>campusrover_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>apriltag_ros</depend>
  <!-- <depend>costmap_converter_msgs</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>