<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>campusrover_rl_policy</name>
  <version>0.1.0</version>
  <description>RL policy inference node for trained VLP-16 navigation policy</description>
  <maintainer email="aa@todo.todo">aa</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>campusrover_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
